--- a/HW1/HW1_test_notebook.ipynb
+++ b/HW1/HW1_test_notebook.ipynb
@@ -15,6 +15,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1f449cf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a test for GitHub\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"This is a test for GitHub\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "id": "a61f0971",
    "metadata": {},
