--- a/HW1/HW1_test_notebook.ipynb
+++ b/HW1/HW1_test_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "2531fb57",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1f449cf3",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "print(f\"This is a test for GitHub\")"
+    "print(f\"This is a test commit from my personal laptop\")"
    ]
   },
   {
@@ -463,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
