Test commit from laptop

--- a/HW1/HW1_test_notebook.ipynb
+++ b/HW1/HW1_test_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2531fb57",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "1f449cf3",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is a test for GitHub\n"
+      "This is a test commit from my personal laptop\n"
      ]
     }
    ],
